2025-03-24  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/include/Rcpp/exceptions.h: Include C+11 variadic template definitions
	unconditionally
	* inst/include/Rcpp/exceptions/cpp11/exceptions.h: Removed
	* inst/include/Rcpp/exceptions/cpp98/exceptions.h: Idem

2025-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* inst/include/Rcpp/String.h: Remove explicit RCPP_USING_CXX11 as
	use of C++11 (or newer) is both implicit and ensuredIdem
	* inst/include/Rcpp/macros/dispatch.h: Idem
	* inst/include/Rcpp/platform/compiler.h: Idem
	* inst/include/Rcpp/unwindProtect.h: Idem
	* inst/tinytest/cpp/wrap.cpp: Idem
	* src/api.cpp: Idem

2025-03-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* inst/include/Rcpp/module/class.h: Use variadic templates unconditionally
	* inst/include/Rcpp/grow.h: Idem
	* inst/include/Rcpp/DottedPair.h: Idem
	* inst/include/Rcpp/Vector.h: Idem
	* inst/include/Rcpp/Function.h: Idem
	* inst/include/Rcpp/internal/call.h: Idem
	* inst/include/Rcpp/InternalFunctionWithStdFunction.h: Idem
	* inst/include/Rcpp/Module.h: Idem
	* inst/include/Rcpp/traits/index_sequence.h: Idem
	* inst/include/Rcpp/traits/named_object.h: Idem
	* inst/include/Rcpp/Language.h: Idem
	* inst/include/Rcpp/DataFrame.h: Idem
	* inst/include/Rcpp/PairList.h: Idem
	* inst/include/Rcpp/InternalFunction.h: Idem

        * inst/include/Rcpp/module/Module_generated_class_constructor.h: Removed
        * inst/include/Rcpp/module/Module_generated_class_factory.h: Idem
        * inst/include/Rcpp/module/Module_generated_method.h: Idem
        * inst/include/Rcpp/module/Module_generated_Pointer_method.h: Idem
	* inst/include/Rcpp/generated/grow__pairlist.h: Idem
	* inst/include/Rcpp/generated/DottedPair__ctors.h: Idem
	* inst/include/Rcpp/generated/Vector__create.h: Idem