@@ -2,7 +2,8 @@
 //
 // algorithm.h: Rcpp R/C++ interface class library -- data frames
 //
-// Copyright (C) 2016 - 2017  Daniel C. Dillon
+// Copyright (C) 2016 - 2024  Daniel C. Dillon
+// Copyright (C) 2025         Daniel C. Dillon and Iñaki Ucar
 //
 // This file is part of Rcpp.
 //
@@ -21,14 +22,6 @@
 
 #ifndef Rcpp__Algorithm_h
 #define Rcpp__Algorithm_h
-
-#if __cplusplus >= 201103L || __INTEL_CXX11_MODE__ == 1
-#    define RCPP_CONSTEXPR_FUNC constexpr
-#    define RCPP_CONSTEXPR_VAR constexpr
-#else
-#    define RCPP_CONSTEXPR_FUNC
-#    define RCPP_CONSTEXPR_VAR const
-#endif
 
 namespace Rcpp {
 namespace algorithm {
@@ -167,29 +160,29 @@ namespace helpers {
     template<>
     struct rtype_helper< double > {
         typedef double type;
-        static RCPP_CONSTEXPR_VAR int RTYPE = REALSXP;
+        static constexpr int RTYPE = REALSXP;
         static inline double NA() { return NA_REAL; }
-        static inline RCPP_CONSTEXPR_FUNC double ZERO() { return 0.0; }
-        static inline RCPP_CONSTEXPR_FUNC double ONE() { return 1.0; }
+        static inline constexpr double ZERO() { return 0.0; }
+        static inline constexpr double ONE() { return 1.0; }
     };
 
     template<>
     struct rtype_helper< int > {
         typedef int type;
-        static RCPP_CONSTEXPR_VAR int RTYPE = INTSXP;
+        static constexpr int RTYPE = INTSXP;
         static inline int NA() { return NA_INTEGER; }
-        static inline RCPP_CONSTEXPR_FUNC int ZERO() { return 0; }
-        static inline RCPP_CONSTEXPR_FUNC int ONE() { return 1; }
+        static inline constexpr int ZERO() { return 0; }
+        static inline constexpr int ONE() { return 1; }
     };
 
     template< typename T >
     struct rtype {
         typedef typename rtype_helper< typename ctype< T >::type >::type type;
         typedef rtype_helper< typename ctype< T >::type > helper_type;
-        static RCPP_CONSTEXPR_VAR int RTYPE = helper_type::RTYPE;
+        static constexpr int RTYPE = helper_type::RTYPE;
         static inline T NA() { return helper_type::NA(); }
-        static inline RCPP_CONSTEXPR_FUNC T ZERO() { return helper_type::ZERO(); }
-        static inline RCPP_CONSTEXPR_FUNC T ONE() { return helper_type::ONE(); }
+        static inline constexpr T ZERO() { return helper_type::ZERO(); }
+        static inline constexpr T ONE() { return helper_type::ONE(); }
     };
 
     struct log {
@@ -482,8 +475,5 @@ void sqrt(InputIterator begin, InputIterator end, OutputIterator out) {
 
 } // namespace algorithm
 } // namespace Rcpp
-
-#undef RCPP_CONSTEXPR_FUNC
-#undef RCPP_CONSTEXPR_VAR
 
 #endif
