@@ -3,7 +3,7 @@
 // longlong.h: Rcpp R/C++ interface class library -- long long support
 //
 // Copyright (C) 2013 - 2017 Dirk Eddelbuettel and Romain Francois
-// Copyright (C) 2018        Dirk Eddelbuettel, Romain Francois and Kevin Ushey
+// Copyright (C) 2018 - 2025 Dirk Eddelbuettel, Romain Francois and Kevin Ushey
 //
 // This file is part of Rcpp.
 //
@@ -23,33 +23,8 @@
 #ifndef RCPP_LONG_LONG_H
 #define RCPP_LONG_LONG_H
 
-// long long is explicitly available to C++11 (and above) compilers
-#if __cplusplus >= 201103L
-
 typedef long long int rcpp_long_long_type;
 typedef unsigned long long int rcpp_ulong_long_type;
 # define RCPP_HAS_LONG_LONG_TYPES
-
-// GNU compilers may make 'long long' available as an extension
-// (note that __GNUC__ also implies clang, MinGW)
-#elif defined(__GNUC__)
-
-// check to see if 'long long' is an alias for 'int64_t'
-# if defined(_GLIBCXX_HAVE_INT64_T) && defined(_GLIBCXX_HAVE_INT64_T_LONG_LONG)
-#  include <stdint.h>
-typedef int64_t rcpp_long_long_type;
-typedef uint64_t rcpp_ulong_long_type;
-#  define RCPP_HAS_LONG_LONG_TYPES
-
-// check to see if this is an older C++ compiler, but extensions are enabled
-# elif defined(__GXX_EXPERIMENTAL_CXX0X__) || (defined(__clang__) && defined(__LP64__))
-#  if defined(__LONG_LONG_MAX__)
-__extension__ typedef long long int rcpp_long_long_type;
-__extension__ typedef unsigned long long int rcpp_ulong_long_type;
-#   define RCPP_HAS_LONG_LONG_TYPES
-#  endif
-# endif
-
-#endif
 
 #endif
